--- a/app/views/facturas/index.html.erb
+++ b/app/views/facturas/index.html.erb
@@ -17,9 +17,8 @@
   <table id="tablafactura" class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-        <th>Nº de factura</th>
+        <th>Periodo</th>
         <th>Cliente</th>
-        <th>Condición</th>
         <th>Fecha</th>
         <th>Iva</th>
         <th>Erssan</th>
@@ -32,10 +31,9 @@
 
     <tbody>
       <%= content_tag_for(:tr, @facturas) do |factura| %>
-      <td><%= factura.nrofact %></td>
+      <td><%= factura.periodo.periodo.strftime("%m-%Y") %></td>
       <td><%= factura.cliente.nombre %></td>
-      <td><%= factura.condicion %></td>
-      <td><%= factura.fecha %></td>
+      <td><%= factura.fecha.strftime("%d-%m-%Y") %></td>
       <td><%= factura.iva %></td>
       <td><%= factura.erssan %></td>
       <td><%= factura.total %></td>
@@ -49,6 +47,9 @@
 
 <script>
 $('#tablafactura').DataTable({
+
+  "order": [[ 0, "desc" ],[ 1, "asc" ]],
+  
   "language": {
     "sProcessing":     "Procesando...",
     "sLengthMenu":     "Mostrar _MENU_ registros",
