--- a/app/views/facturas/show.html.erb
+++ b/app/views/facturas/show.html.erb
@@ -14,11 +14,12 @@
 
 <!--
 <dl class="dl-horizontal">
-  <dt>Nº de factura:</dt>
-  <dd><%= @factura.nrofact %></dd>
 
   <dt>Cliente:</dt>
   <dd><%= @factura.cliente_id %></dd>
+
+  <dt>Periodo:</dt>
+  <dd><%= @factura.periodo_id %></dd>
 
   <dt>Condición:</dt>
   <dd><%= @factura.condicion %></dd>
